# camif-customfw-iris

./: Makefile  README.md
AW2026/: Makefile
AW2026/src/: leds-aw2026.c  leds-aw2026.h
Accelerator/: Makefile
Accelerator/src/: st_lis2dw12_buffer.c  st_lis2dw12_core.c  st_lis2dw12_events.c
MKD2061/: Makefile
MKD2061/led_src/: leds-ktd2061.c
Motor/: Makefile
Motor/src/: motor.c  pega_gpio.c  pega_gpio.h  pega_motor_awd8833.c  pega_motor_awd8833.h
Motor_v2/: Makefile
Motor_v2/.tmp_2176664/: tmp
Motor_v2/src/: motor.c  pega_gpio.c  pega_gpio.h  pega_motor_awd8833.c  pega_motor_awd8833.h
accelerator/: Makefile
accelerator/src/: st_lis2dw12.h  st_lis2dw12_i2c.c
led/MKD2061/: Makefile
motor/: Makefile
motor/src/: motor.c  pega_gpio.c  pega_motor_awd8833.c  pega_motor_awd8833.h
pegatron-diag/: Makefile  vendor.mk
pegatron-diag/OPT300x/: Makefile  opt300x.mak
pegatron-diag/TAS2563/: Makefile  config  tas2563.mak
pegatron-diag/TCA9538/: Makefile  TCA9538.mak
pegatron-diag/audbclk/: Makefile  test.mak
pegatron-diag/audio_alg_BF_demo/: pega_test.mak  test_BF_2mic.c  test_BF_4mic.c
pegatron-diag/audio_alg_SSL_demo/: Makefile  pega_ssl  pega_test.mak
pegatron-diag/include/: asl  ezmsgq  ezsocket  proj-defines.h  proj-platform.h  stat_reg  timer  util
pegatron-diag/make/: config.mk  makefile.mk  tools.mk
pegatron-diag/pega_PWMmotor/: pega_motor.mak
pegatron-diag/pega_Record/: Makefile  pega_test.mak
pegatron-diag/pega_acc/: Makefile  pega_acc.mak
pegatron-diag/pega_accread/: pega_rled.mak
pegatron-diag/pega_ble/: CleanAll.bat  Makefile  pega_ble.mak
pegatron-diag/pega_button/: Makefile  pega_button.mak
pegatron-diag/pega_debug/: Makefile  pega_debug.mak
pegatron-diag/pega_demo/: Makefile  pega_demo.mak
pegatron-diag/pega_diag/: Makefile  config  pega_diag.mak
pegatron-diag/pega_dtbo/: Makefile  pega_dtbo.mak
pegatron-diag/pega_gpio/: Makefile  pega_gpio.mak
pegatron-diag/pega_gpiod/: Makefile  pega_gpiod.mak
pegatron-diag/pega_int/: Makefile  pega_int.mak
pegatron-diag/pega_ip/: AppCopy.bat  Makefile  pega_ip.mak
pegatron-diag/pega_misc/: Makefile  nfc_lib.mak  pega_misc.mak
pegatron-diag/pega_misc_dbg/: Makefile  pega_misc_dbg.mak
pegatron-diag/pega_motor/: Makefile  pega_motor.mak
pegatron-diag/pega_motor_v2/: Makefile  pega_motor.mak
pegatron-diag/pega_nfc/: Makefile  config  makefile  pega_rled.mak
pegatron-diag/pega_nxp/: Makefile  pega_nxp.mak
pegatron-diag/pega_nxp_wifi/: Makefile  pega_nxp_wifi.mak
pegatron-diag/pega_stNFC/ST25R3916_v2.8.0_Linux_demo_v1.0/linux_demo/: CMakeLists.txt  toolchain_arm-linux-gnueabihf.cmake
pegatron-diag/pega_stNFC/ST25R3916_v2.8.0_Linux_demo_v1.0/linux_demo/demo/: CMakeLists.txt
pegatron-diag/pega_stNFC/ST25R3916_v2.8.0_Linux_demo_v1.0/linux_demo/demo/Src/: main.c
pegatron-diag/pega_stNFC/ST25R3916_v2.8.0_Linux_demo_v1.0/linux_demo/platform/Inc/: pltf_spi.h  pltf_timer.h
pegatron-diag/pega_stNFC/ST25R3916_v2.8.0_Linux_demo_v1.0/linux_demo/platform/Src/: pltf_gpio.c  pltf_spi.c
pegatron-diag/pega_stNFC/ST25R3916_v2.8.0_Linux_demo_v1.0/linux_demo/platform/st25r3916/: CMakeLists.txt  rfal_platform.h
pegatron-diag/pega_stNFC/ST25R3916_v2.8.0_Linux_demo_v1.0/linux_demo/platform/st25r3916b/: CMakeLists.txt  rfal_platform.h
scripts/: Demo_enable.sh  Demo_training.sh  Ethernet_on.sh  IW610_ble_on.sh  IW610_mfgbridge_test.sh  IW610_rftest.sh  IW610_wifi_enable.sh  IW610_wifi_on.sh  IW610_wifi_retry.sh  NFC.sh  acc.sh  ble_service_on.sh  hdr_streaming_on.sh  libgpiod_enable.sh  matter_commissioning.sh  matter_light_control.sh  matter_onoff.sh  matter_plug_control.sh  matter_reset.sh  motor.sh  nff_run_process.sh  ring_led.sh  set_time.sh  streaming_on.sh  wifi_connect.sh  wifi_driver_off.sh  wifi_password.sh  wifi_ssid.sh
(+450 files in other folders)
